--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,9 @@
 {
-  "name": "IonicSpike",
-  "private": "true",
-  "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.13"
-  }
+    "name": "IonicSpike",
+    "private": "true",
+    "devDependencies": {
+        "ionic": "driftyco/ionic-bower#1.0.0-beta.13",
+        "requirejs": "~2.1.15",
+        "text": "~2.0.10"
+    }
 }
