--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "devDependencies": {
         "ionic": "driftyco/ionic-bower#1.0.0-beta.13",
         "requirejs": "~2.1.15",
-        "text": "~2.0.10"
+        "text": "~2.0.10",
+        "d3": "3.4.13"
     }
 }
